--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -18,10 +18,10 @@
   
     <div id="navbarExampleTransparentExample" class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item" href="https://github.com/HAMZOO0/File-Sharing-Platform-"> Documentation  </a>
+        <a class="navbar-item" href="https://github.com/codewithEvilxd/File-Sharing-Platform"> Documentation  </a>
         <div class="navbar-item has-dropdown is-active">
         
-            <a class="navbar-item" href="https://www.linkedin.com/in/hamza-sajid-developer/"> Developer  </a>
+            <a class="navbar-item" href="https://www.instagram.com/in/game_changer.09/"> Developer  </a>
        
         </div>
       </div>
